# Announcement-API

./: .gitignore  Cargo.toml  Makefile  README.md  cert.pem  key.pem
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/static/: announcements.html  club-login.html  index.html  layout.html  logout.html  prefect-announcements.html  styles.css
app/src/static/js/: main.js  package-lock.json
app/src/utils/: home.rs  login.rs  logout.rs  password.rs  services.rs  signup.rs
auth/: Cargo.toml
auth/src/: lib.rs  main.rs  secure_token.rs  session.rs  settings.rs
auth/src/middleware/: check_login.rs  content_type.rs  modify_token.rs
auth/src/utils/: login.rs  logout.rs  mod.rs  password.rs  services.rs  signup.rs
common/: Cargo.toml
common/src/: lib.rs
migrations/: 20250101004040_initialize.sql  20250628001823_create_admin_table.sql
src/: lib.rs  main.rs  secure_token.rs  services.rs  session.rs
src/middeware/: mod.rs
src/middleware/: check_login.rs  check_token.rs  mod.rs  modify_token.rs
src/middleware/check_login/: mod.rs
src/middleware/check_token/: mod.rs
src/static/: announcements.html  authenticate.html  club-login.html  index.html  layout.html  logout.html  make-password.html  prefect-announcements.html  prefect-login.html  registration.html  styles.css
src/static/js/: main.js  package.json
src/utils/: home.rs  login.rs  logout.rs  middleware.rs  mod.rs  password.rs  services.rs  signup.rs  temp_pin.rs
tests/: home.rs  login.rs  logout.rs  password.rs  services.rs  signup.rs
tests/common/: mod.rs
