[package]
name = "announcement-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-web-httpauth = "0.8.1"
chrono = "0.4.35"
dotenv = "0.15.0"
env_logger = "0.11.3"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "uuid"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
