[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = { version = "4.5.1", features = ["openssl"] }
auth = { path = "../auth" }
common = { path = "../common" }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls", "uuid"] }
tera = "1.20.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
