[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4.11.0"
chrono = "0.4.41"
openssl = "0.10.73"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
